lib/grammar/frontend/parser/Parser.cpp
//
//Created by Rohit Maurya 10/11/2019.
//

#include "Parser.h"
#include "../../main.h"
#include "Ast.h"

#define current() \
    (*_current)

#define advance() \
    if(_current->getType() != _EOF) \
        _current++;

#define isEnd() \
    (_current->getType() == _EOF)

long recursion = 0;
void parser::parse() {
    if(toks->size() == 0)
        return;

    errors = new ErrorManager(&toks->getLines(), toks->file, false, c_options.aggressive_errors);
    _current= &toks->getTokens().get(0);

    while(true) {
        if(panic)
            break;

        // evaluate
        if(isAccessDecl(current()))
        {
            parseAccessTypes();
        }
        CHECK_ERRLMT(return;)

        if(isEnd())
        {
            break;
        } else if(isModuleDecl(current()))
        {
            if(access_types.size() > 0)
                errors->createNewError(ILLEGAL_ACCESS_DECLARATION, current());

            parseModuleDecl(NULL);
        } else if(isImportDecl(current()))
        {
            if(access_types.size() > 0)
                errors->createNewError(ILLEGAL_ACCESS_DECLARATION, current());

            parseImportDecl(NULL);
        } else if(isClassDecl(current()))
        {
            parseClassDecl(NULL);
        } else if(isMutateDecl(current()))
        {
            parseMutateDecl(NULL);
        }
        else if(isMethodDecl(current()))
        {
            parseMethodDecl(NULL);
        }
        else if(isAliasDeclaration(current()))
        {
            parseAliasDeclaration(NULL);
        }
        else if(isInterfaceDecl(current()))
        {
            parseInterfaceDecl(NULL);
        }
        else if(isObfuscateDecl(current()))
        {
            parseObfuscateDecl(NULL);
        }
        else if(isEnumDecl(current()))
        {
            parseEnumDecl(NULL);
        }
        else if((isVariableDecl(current()) && (*peek(1) == ":" || *peek(1) == ":=")) ||
                (isStorageType(current()) && (isVariableDecl(*peek(1)) && (*peek(2) == ":" || *peek(2) == ":="))))
        {
            parseVariableDecl(NULL);
        }
        else if(current().getType() == SEMICOLON)
        {
            if(access_types.size() > 0) {
                errors->createNewError(ILLEGAL_ACCESS_DECLARATION, current());
                access_types.free();
            }

            errors->createNewWarning(GENERIC, current().getLine(), current().getColumn(), "unnecessary semicolon ';'");
        }
        else
        {
            // "expected class, or import declaration"
            errors->createNewError(UNEXPECTED_SYMBOL, current(), " `" + current().getValue() + "`; expected class, enum, or import declaration");
            parseAll(NULL);
        }

        _continue:
        advance();
        access_types.free();
    }

    parsed = !panic;
}

bool parser::isObfuscationOption(Token &token) {
    return token.getValue() == "keep";
}

void parser::parseObfuscateDecl(Ast *ast) {
    Ast *branch = getBranch(ast, ast_obfuscate_decl);

    if(*peek(1) == "-") {
        if(isObfuscationOption(*peek(2))) {
            expect(branch, "-", false);
            expect(branch, peek(1)->getValue());
        } else
            errors->createNewError(GENERIC, current(), "expected obfuscation option");
    }

    parseObfuscateBlock(branch);
}

void parser::parseObfuscateElement(Ast *ast) {
    Ast *branch = getBranch(ast, ast_obfuscate_element);
    if(peek(1)->getId() == STRING_LITERAL) {
        advance()
        branch->addToken(current());
    } else {
        parseUtype(branch);
        if(peek(1)->getType() == LEFTPAREN) {
            parseUtypeArgListOpt(branch);
            parseMethodReturnType(branch);
        }
    }
}

void parser::parseObfuscateBlock(Ast *ast) {
    Ast *branch = getBranch(ast, ast_obfuscate_block);

    expect(branch, "{", false);

    if(peek(1)->getType() != RIGHTCURLY)
    {
        parseObfuscateElement(branch);

        _pObfuscateDecl:
        if(peek(1)->getType() == COMMA)
        {
            expect(branch, ",", false);
            parseObfuscateElement(branch);
            goto _pObfuscateDecl;
        }
    }

    expect(branch, "}", false);
}

void parser::parseInterfaceDecl(Ast *ast) {
    Ast *branch = getBranch(ast, ast_interface_decl);
    addAccessTypes(branch);
    access_types.free();

    // class name
    expectIdentifier(branch);

    if(peek(1)->getValue() == "<") {
        branch->setAstType(ast_generic_interface_decl);

        expect(branch, "<", false);
        parseIdentifierList(branch);
        expect(branch, ">", false);
    }

    if(peek(1)->getValue() == "base")
    {
        expect(branch, "base");
        parseReferencePointer(branch);
    }

    parseInterfaceBlock(branch);

//    cout << branch->toString() << endl;
//    cout << std::flush;
//    int i = 0;
}

void parser::parseMethodDecl(Ast *ast) {
    Ast* branch = getBranch(ast, ast_method_decl);

    addAccessTypes(branch);
    access_types.free();

    parseReferencePointer(branch);
    if(isOverrideOperator(current().getValue()))
    {
        errors->createNewError(GENERIC, current(), "expected identifier");
    }

    parseUtypeArgList(branch);
    if (peek(1)->getType() == COLON) {
        parseMethodReturnType(branch);

        if (peek(1)->getType() == EQUALS) {
            expect(branch, "=", true);
            parseExpression(branch);
            expect(branch, ";", false);
        } else if(*peek(1) == ";") {
            expect(branch, ";", false);
            branch->setAstType(ast_delegate_decl);
        } else {
            if(peek(1)->getType() != LEFTCURLY)
                errors->createNewError(GENERIC, current(), "expected `{`");
            parseBlock(branch);
        }
    } else if (peek(1)->getType() == INFER) {
        expect(branch, ":=", true);
        parseExpression(branch);
        expect(branch, ";", false);
    } else if(*peek(1) == ";") {
        expect(branch, ";", false);
        branch->setAstType(ast_delegate_decl);
    }
    else {
        if(peek(1)->getType() != LEFTCURLY)
            errors->createNewError(GENERIC, current(), "expected `{`");
        parseBlock(branch);
    }
}

void parser::parseBlock(Ast* ast) {
    Ast* branch = getBranch(ast, ast_block);

    bool curly = false;
    if(*peek(1) == "{") {
        expect(branch, "{");
        curly = true;
    }

    while(!isEnd())
    {
        CHECK_ERRLMT(return;)

        advance();
        if (current().getType() == RIGHTCURLY)
        {
            if(!curly)
                errors->createNewError(UNEXPECTED_SYMBOL, current(), "'}'");
            _current--;
            break;
        }
        else if(current().getType() == LEFTCURLY)
        {
            _current--;
            parseBlock(branch);
        }
        else if(current().getType() == _EOF)
        {
            errors->createNewError(UNEXPECTED_EOF, current());
            break;
        }
        else {
            parseStatement(branch);
            if(peek(1)->getType() == DOT) {
                advance()
                errors->createNewError(GENERIC, current(), "unexpected symbol `.`");
            }

            if(!curly) {
                access_types.free();
                break;
            }
        }

        access_types.free();
    }

    if(curly)
        expect(branch, "}");
}

void parser::parseLambdaBlock(Ast* ast) {
    Ast* branch = getBranch(ast, ast_block);

    while(!isEnd())
    {
        CHECK_ERRLMT(return;)

        advance();
        if (current().getType() == RIGHTCURLY)
        {
            _current--;
            break;
        }
        else if(current().getType() == LEFTCURLY)
        {
            _current--;
            parseBlock(branch);
        }
        else if(current().getType() == _EOF)
        {
            errors->createNewError(UNEXPECTED_EOF, current());
            break;
        }
        else {
            if(!parseStatement(branch))
                break;
            else {
                if(peek(1)->getType() == DOT) {
                    advance()
                    errors->createNewError(GENERIC, current(), "unexpected symbol `.`");
                }
            }
        }
    }

    expect(branch, "}");
}

void parser::parseReturnStatement(Ast *ast) {
    Ast* branch = getBranch(ast, ast_return_stmnt);

    branch->addToken(current());

    if(*peek(1) != ";")
        parseExpression(branch);

    expect(branch, ";");
}

void parser::parseAliasDeclaration(Ast *ast) {
    Ast* branch = getBranch(ast, ast_alias_decl);

    access_types.free();
    if(isAccessDecl(current()))
    {
        parseAccessTypes();
    }

    parseUtype(branch);
    expect(branch, "as", false);
    expectIdentifier(branch);
    expect(branch, ";", false);
}

void parser::parseIfStatement(Ast *ast) {
    Ast* branch = getBranch(ast, ast_if_statement);

    expect(branch, "(");
    parseExpression(branch);
    expect(branch, ")");

    parseBlock(branch);

    Ast* tmp;
    bool isElse = false;
    condexpr:
    if(peek(1)->getValue() == "else")
    {
        if(peek(2)->getValue() == "if")
        {
            tmp = getBranch(branch, ast_elseif_statement);

            advance();
            tmp->addToken(current());
            advance();
            tmp->addToken(current());

            expect(branch, "(");
            parseExpression(tmp);
            expect(branch, ")");
        }
        else
        {
            tmp = getBranch(branch, ast_else_statement);

            advance();
            tmp->addToken(current());
            isElse = true;
        }


        parseBlock(tmp);
        if(!isElse)
            goto condexpr;
    }
}

void parser::parseForStatement(Ast *ast) {
    Ast* branch = getBranch(ast, ast_for_statement);

    _current--;
    if(branch->line >= 3000) {
        int i = 0;
    }
    expect(branch, "for");

    expect(branch, "(");

    if(peek(1)->getType() != SEMICOLON) {
        _current++;
        RETAIN_RECURSION(0)
        parseVariableDecl(branch);
        RESTORE_RECURSION()
    } else {
        expect(branch, ";");
    }

    if(peek(1)->getType() != SEMICOLON) {
        Ast *exprCond = getBranch(branch, ast_for_expresion_cond);
        parseExpression(exprCond);
    }
    expect(branch, ";");

    if(peek(1)->getType() != RIGHTPAREN) {
        Ast *exprIter = getBranch(branch, ast_for_expresion_iter);
        parseExpression(exprIter);
    }

    expect(branch, ")");

    parseBlock(branch);
}

void parser::parseWhileStatement(Ast *ast) {
    Ast* branch = getBranch(ast, ast_while_statement);

    _current--;
    expect(branch, "while", false);

    expect(branch, "(", false);
    parseExpression(branch);
    expect(branch, ")", false);

    parseBlock(branch);
}

void parser::parseDoWhileStatement(Ast *ast) {
    Ast* branch = getBranch(ast, ast_do_while_statement);

    _current--;
    expect(branch, "do", false);
    parseBlock(branch);

    expect(branch, "while", false);
    expect(branch, "(", false);
    parseExpression(branch);
    expect(branch, ")", false);
    expect(branch, ";", false);
}

void parser::parseThrowStatement(Ast *ast) {
    Ast* branch = getBranch(ast, ast_throw_statement);

    _current--;
    expect(branch, "throw", false);
    parseExpression(branch);
    expect(branch, ";", false);
}

void parser::parseGotoStatement(Ast *ast) {
    Ast* branch = getBranch(ast, ast_goto_statement);

    _current--;
    expect(branch, "goto", false);
    expectIdentifier(branch);
    expect(branch, ";", false);
}

void parser::parseWhenStatement(Ast *ast) {
    Ast* branch = getBranch(ast, ast_when_statement);

    _current--;
    expect(branch, "when", false);
    if(peek(1)->getValue() == "(") {
        expect(branch, "(", false);
        parseExpression(branch);
        expect(branch, ")", false);
    }

    parseWhenBlock(branch);
}

void parser::parseAsmStatement(Ast *ast) {
    Ast* branch = getBranch(ast, ast_assembly_statement);

    _current--;
    expect(branch, "asm", false);
    if(peek(1)->getValue() == "volatile") {
        expect(branch, "volatile");
    }

    parseAsmBlock(branch);
}

void parser::parseAssemblyInstruction(Ast *ast) {
    Ast* branch = getBranch(ast, ast_assembly_instruction);

    if(*peek(1) == "nop") {
        expect(branch, peek(1)->getValue());
    } else if(*peek(1)  == "int") {
        expect(branch, peek(1)->getValue());
        parseLiteral(branch);
    } else if(*peek(1)  == "movi") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "ret") {
        expect(branch, peek(1)->getValue());
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "hlt") {
        expect(branch, peek(1)->getValue());
    } else if(*peek(1)  == "newVarArray") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "cast") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
    } else if(*peek(1)  == "mov8") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "mov16") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "mov32") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "mov64") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "movu8") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "movu16") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "movu32") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "movu64") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "rstore") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
    } else if(*peek(1)  == "add") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    }  else if(*peek(1)  == "sub") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "mul") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "div") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "mod") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "iadd") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "isub") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "idiv") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "imod") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "pop") {
        expect(branch, peek(1)->getValue());
    } else if(*peek(1)  == "inc") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
    } else if(*peek(1)  == "dec") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
    } else if(*peek(1)  == "movr") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "iaload") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "brh") {
        expect(branch, peek(1)->getValue());
    } else if(*peek(1)  == "ife") {
        expect(branch, peek(1)->getValue());
    } else if(*peek(1)  == "ifne") {
        expect(branch, peek(1)->getValue());
    } else if(*peek(1)  == "lt") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "gt") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "le") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "ge") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "movl") {
        expect(branch, peek(1)->getValue());
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "movsl") {
        expect(branch, peek(1)->getValue());
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "sizeof") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
    } else if(*peek(1)  == "put") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
    } else if(*peek(1)  == "putc") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
    } else if(*peek(1)  == "checklen") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
    } else if(*peek(1)  == "jmp") {
        expect(branch, peek(1)->getValue());
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "loadpc") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
    } else if(*peek(1)  == "pushObj") {
        expect(branch, peek(1)->getValue());
    } else if(*peek(1)  == "del") {
        expect(branch, peek(1)->getValue());
    } else if(*peek(1)  == "call") {
        expect(branch, peek(1)->getValue());
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "newClass") {
        expect(branch, peek(1)->getValue());
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "movn") {
        expect(branch, peek(1)->getValue());
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "sleep") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
    } else if(*peek(1)  == "te") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "tne") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "lock") {
        expect(branch, peek(1)->getValue());
    } else if(*peek(1)  == "ulock") {
        expect(branch, peek(1)->getValue());
    } else if(*peek(1)  == "movg") {
        expect(branch, peek(1)->getValue());
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "movnd") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
    } else if(*peek(1)  == "newObjArray") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
    } else if(*peek(1)  == "not") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "skip") {
        expect(branch, peek(1)->getValue());
        parseLiteral(branch);
    } else if(*peek(1)  == "loadVal") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
    } else if(*peek(1)  == "shl") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "shr") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "skipife") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseLiteral(branch);
    } else if(*peek(1)  == "skipifne") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseLiteral(branch);
    } else if(*peek(1)  == "and") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "uand") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "or") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "xor") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseRegister(branch);
    } else if(*peek(1)  == "throw") {
        expect(branch, peek(1)->getValue());
    } else if(*peek(1)  == "checknull") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
    } else if(*peek(1)  == "returnObj") {
        expect(branch, peek(1)->getValue());
    } else if(*peek(1)  == "newClassArray") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "newString") {
        expect(branch, peek(1)->getValue());
        parseLiteral(branch);
    } else if(*peek(1)  == "addl") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "subl") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "mull") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "divl") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "modl") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "iaddl") {
        expect(branch, peek(1)->getValue());
        parseLiteral(branch);
        expect(branch, ",", false);
        parseLiteral(branch);
    } else if(*peek(1)  == "isubl") {
        expect(branch, peek(1)->getValue());
        parseLiteral(branch);
        expect(branch, ",", false);
        parseLiteral(branch);
    } else if(*peek(1)  == "idivl") {
        expect(branch, peek(1)->getValue());
        parseLiteral(branch);
        expect(branch, ",", false);
        parseLiteral(branch);
    } else if(*peek(1)  == "imull") {
        expect(branch, peek(1)->getValue());
        parseLiteral(branch);
        expect(branch, ",", false);
        parseLiteral(branch);
    } else if(*peek(1)  == "imodl") {
        expect(branch, peek(1)->getValue());
        parseLiteral(branch);
        expect(branch, ",", false);
        parseLiteral(branch);
    } else if(*peek(1)  == "loadl") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseAsmLiteral(branch);
    } else if(*peek(1)  == "popObj") {
        expect(branch, peek(1)->getValue());
    } else if(*peek(1)  == "smovr") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseLiteral(branch);
    } else if(*peek(1)  == "andl") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseLiteral(branch);
    } else if(*peek(1)  == "orl") {
        expect(branch, peek(1)->getValue());
        parseRegister(branch);
        expect(branch, ",", false);
        parseLiteral(branch);
    } else if(*peek(1)  == "xorl") {
        expect(branch, peek(1)->getValue());
